--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -25,5 +25,18 @@ spec:
       containers:
       - name: nginx
         image: joindevops/mysql:1.0.0
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  selector: 
+    app: mysql
+    tier: mysql
+    project:  expense
+  ports:
+    - protocol: TCP
+      port: 3306 # service port
+      targetPort: 3306
        
